Make sure audio does not overlap text

--- a/src/components/TimeLine/TimeLine.scss
+++ b/src/components/TimeLine/TimeLine.scss
@@ -130,3 +130,7 @@
 .tl-timeera.tl-timeera-color5 .tl-timeera-background {
   background-color: #dec69a;
 }
+
+.tl-media-audio {
+  max-width: 100%;
+}
